--- a/.env
+++ b/.env
@@ -18,3 +18,18 @@
 APP_ENV=dev
 APP_SECRET=6eeada863f5d9c51ce5c28cc1a8194a0
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="postgresql://symfony:123456@127.0.0.1:5432/symfony?serverVersion=15&charset=utf8"
+###< doctrine/doctrine-bundle ###
+
+###> docker compose ###
+POSTGRES_DB=symfony
+POSTGRES_PASSWORD=123456
+POSTGRES_USER=symfony
+###< docker compose ###
