--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "2.15.x-dev",
         "symfony/console": "6.2.*",
+        "symfony/doctrine-messenger": "6.2.*",
         "symfony/dotenv": "6.2.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.2.*",
+        "symfony/messenger": "6.2.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/property-access": "6.2.*",
         "symfony/runtime": "6.2.*",
