--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/monolog-bundle": "^3.8",
         "symfony/property-access": "6.2.*",
         "symfony/runtime": "6.2.*",
+        "symfony/security-bundle": "6.2.*",
         "symfony/serializer": "6.2.*",
         "symfony/validator": "6.2.*",
         "symfony/yaml": "6.2.*"
